removed dashboard from API docs as well as express router paths
